--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <form action="" method="get" id="form_buscar_fotos">
                     <div class="input-group mt-5">
                         <input type="text" class="form-control" placeholder="Buscar fotos" aria-label="Buscar fotos"
-                            aria-describedby="buscar_fotos" id="input_buscar_fotos">
+                            aria-describedby="buscar_fotos" id="input_buscar_fotos" autocomplete="off">
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="submit" id="btn_buscar_fotos">Buscar</button>
                         </div>
@@ -50,6 +50,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/skeleton.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
